--- a/splunk/Dockerfile
+++ b/splunk/Dockerfile
@@ -1,5 +1,5 @@
 ### Dockerfile for splunk
-### Originally from dmaxwell351/docker-containers
+### Originally from dmaxwell351/docker-containers and splunk/docker-splunk
 FROM phusion/baseimage:0.10.0
 label maintainer="jtok"
 
