--- a/splunk/Dockerfile
+++ b/splunk/Dockerfile
@@ -65,8 +65,8 @@ RUN chmod +x /sbin/entrypoint.sh
 COPY updatefiles.sh /opt/updatefiles.sh
 RUN chmod a+x /opt/updatefiles.sh
 
-WORKDIR /opt
-RUN ./updatefiles.sh
+#WORKDIR /opt
+#RUN ./updatefiles.sh
 
 
 EXPOSE 8000/tcp 8089/tcp 9997/tcp 514/udp
