updating run command for updatefiles.sh

--- a/splunk/Dockerfile
+++ b/splunk/Dockerfile
@@ -62,16 +62,14 @@ COPY entrypoint.sh /sbin/entrypoint.sh
 RUN chmod +x /sbin/entrypoint.sh
 
 #Update local files
-#COPY updatefiles.sh /opt/updatefiles.sh
-#RUN chmod a+x /opt/updatefiles.sh
-
-#WORKDIR /opt
-#RUN ./updatefiles.sh
+#COPY updatefiles.sh /opt/splunk/updatefiles.sh
+#RUN chmod a+x /opt/splunk/updatefiles.sh
 
 
 EXPOSE 8000/tcp 8089/tcp 9997/tcp 514/udp
 
 WORKDIR /opt/splunk
+#RUN /updatefiles.sh
 
 VOLUME ["/opt/splunk/var", "/opt/splunk/etc", "/data", "/license"]
 
