Make apt cleanup more thorough.

--- a/splunk/Dockerfile
+++ b/splunk/Dockerfile
@@ -3,6 +3,7 @@
 FROM phusion/baseimage:0.10.0
 label maintainer="jtok"
 
+# Set environment variables
 ENV HOME=/root
 ENV SPLUNK_HOME=/opt/splunk
 ENV DEBIAN_FRONTEND=noninteractive
@@ -15,7 +16,6 @@ ENV SPLUNK_VERSION=7.0.2
 ENV SPLUNK_BUILD=03bbabbd5c0f
 ENV SPLUNK_FILENAME=splunk-${SPLUNK_VERSION}-${SPLUNK_BUILD}-Linux-x86_64.tgz
 ENV SPLUNK_BACKUP_DEFAULT_ETC=/var/opt/splunk
-
 ENV SPLUNK_START_ARGS="--accept-license --answer-yes --no-prompt"
 
 # Use Phusion's init system.
@@ -31,26 +31,30 @@ ENV SPLUNK_USER nobody
 ENV SPLUNK_GROUP users
 
 
-# make the "en_US.UTF-8" locale so splunk will be utf-8 enabled by default
+# Make the "en_US.UTF-8" locale so Splunk will be utf-8 enabled by default
 RUN apt-get update -q \
   && apt-get install -y --no-install-recommends apt-utils \
-  && apt-get install -y locales  && rm -rf /var/lib/apt/lists/* \
-	&& localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
+  && apt-get install -y locales
+  && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
+  	&& localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
 ENV LANG en_US.utf8
 
 # pdfgen dependency
 RUN apt-get update -q \
   && apt-get install -y libgssapi-krb5-2 \
-  && rm -rf /var/lib/apt/lists/*
+  && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-# sudo dependency
+# Install sudo
 RUN apt-get update -q \
   && apt-get install -y sudo \
-  && rm -rf /var/lib/apt/lists/*
+  && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
+# Install wget
 RUN apt-get update -q \
-  && apt-get install -y wget
+  && apt-get install -y wget \
+  && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
+# Install Splunk and remove wget
 RUN mkdir -p ${SPLUNK_HOME} \
   && wget -O /tmp/${SPLUNK_FILENAME} https://download.splunk.com/products/${SPLUNK_PRODUCT}/releases/${SPLUNK_VERSION}/linux/${SPLUNK_FILENAME} \
   && tar xzf /tmp/${SPLUNK_FILENAME} --strip 1 -C ${SPLUNK_HOME} \
@@ -61,20 +65,17 @@ RUN mkdir -p ${SPLUNK_HOME} \
   && rm -fR ${SPLUNK_HOME}/etc \
   && chown -R nobody:users ${SPLUNK_HOME} \
   && chown -R nobody:users ${SPLUNK_BACKUP_DEFAULT_ETC} \
-  && rm -rf /var/lib/apt/lists/*
+  && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
+# Copy entrypoint script
 COPY entrypoint.sh /sbin/entrypoint.sh
 RUN chmod +x /sbin/entrypoint.sh
 
-#Copy update for local files and make executable
-#COPY updatefiles.sh /opt/splunk/updatefiles.sh
-#RUN chmod a+x /opt/splunk/updatefiles.sh
-
+# Set up ports
 EXPOSE 8000/tcp 8089/tcp 9997/tcp 514/udp
 
-#Run update for local files
+# Set workdir
 WORKDIR /opt/splunk
-#RUN updatefiles.sh
 
 VOLUME ["/opt/splunk/var", "/opt/splunk/etc", "/data", "/license"]
 
