--- a/splunk/Dockerfile
+++ b/splunk/Dockerfile
@@ -1,7 +1,7 @@
 ### Dockerfile for splunk:testing
 ### Originally from dmaxwell351/docker-containers and splunk/docker-splunk
 FROM phusion/baseimage:0.10.0
-label maintainer="jtok"
+LABEL maintainer="jtok"
 
 # Set environment variables
 ENV HOME=/root
